Final Part 2 Commit
Just so minor fixes and added a folder with the screenshots of the app and updated the readme file.